# GoIT_Web_FastAPI

./: .env.example  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 4d89b087037a_init.py  657b399cf112_add_table_users.py
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
